<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Aproposdenous">

    <TextView
        android:id="@+id/field1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:text="@string/a_propos_de_nous"
        android:textColor="@color/white"
        android:background="@color/blue"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/field2"
        android:textColor="@color/blue"
        android:text="@string/membres_du_groupe"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field1"
        android:gravity="start"
        android:paddingLeft="20dp"
        android:textSize="25sp"
        android:paddingRight="5dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/membres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/liste_membres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field2"
        android:gravity="start"
        android:paddingLeft="20dp"
        android:textSize="15sp"
        tools:ignore="RtlHardcoded,RtlSymmetry">
    </TextView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lien"
        android:textColor="@color/blue"
        android:text="@string/lien_du_repository"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/membres"
        android:gravity="start"
        android:paddingLeft="20dp"
        android:textSize="25sp"
        android:paddingStart="20dp" />

    <TextView
        android:id="@+id/repo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHeight_percent="0.05"
        android:textColor="@color/blue"
        android:text="@string/LiensGit"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lien"
        android:gravity="start"
        android:paddingLeft="20dp"
        android:autoLink="web"
        android:textColorLink="@color/blue"
        android:textSize="15sp"
        android:paddingRight="5dp"
        android:paddingStart="20dp"
        android:paddingEnd="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lib"
        android:textColor="@color/blue"
        android:text="@string/librairies_externes"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repo"
        android:gravity="start"
        android:paddingLeft="20dp"
        android:textSize="25sp"
        android:paddingRight="5dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fonct"
        android:textColor="@color/blue"
        android:text="@string/fonctionalites"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lib"
        android:paddingLeft="20dp"
        android:textSize="25sp"
        android:paddingRight="5dp" />

    <TextView
        android:id="@+id/fonct1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/liste_fonctionalite"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fonct"
        android:gravity="start"
        android:paddingLeft="20dp"
        android:textSize="15sp"
        android:paddingRight="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>