<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/category_item"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="5dp"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/article_title"
            android:text="@string/Titre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="11pt"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/article_source"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/article_source"
            android:text="@string/Source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/article_image"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/article_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/article_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/article_title"
            app:layout_constraintVertical_bias="1.0"
            tools:src="@drawable/placeholder" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/article_description"
            android:text="@string/Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/article_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/article_detail"
            android:text="@string/Details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="8"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/article_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/redirection_article"
            android:text="@string/Lire"
            android:layout_width="150dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/article_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
