<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:padding="5dp"
    app:cardCornerRadius="5dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/article_title"
            android:text="@string/Titre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="11pt"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/article_source"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/article_source"
            android:text="@string/Source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/article_image"
            android:layout_marginStart="10dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/article_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@id/article_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/article_title"
            tools:src="@drawable/placeholder" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/article_description"
            android:text="@string/Description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="2"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/article_image"
            app:layout_constraintStart_toStartOf="parent"
             />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/favorite_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/ic_favorite_empty"
            app:layout_constraintTop_toBottomOf="@id/article_source"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>

